# django-ai-chat

./: .gitconfig  MANIFEST  README.md  pyproject.toml
ai_chat/: __init__.py  forms.py  providers.py  types.py  urls.py  views.py
ai_chat/prompts/: admin.py  apps.py  models.py
ai_chat/prompts/migrations/: 0001_initial.py
ai_chat/static/ai_chat/css/: chat.css
ai_chat/static/ai_chat/js/: chat.js
ai_chat/templates/: base.html
ai_chat/templates/ai_chat/: _chat.html  chat.html  chat_form.html
ai_chat/templatetags/: ai_chat_tags.py
