[project]
name = "django-ai-chat"
version = "0.1.0"
dependencies = [
    "django>=4.2",
    "ollama>=0.6",
    "openai>=2.3.0",
]

[tool.uv]
dev-dependencies = [
    "djlint>=1.36.4",
]

[tool.djlint]
indent=2
format_js=true
format_css=true

[tool.djlint.css]
indent_size=2

[tool.djlint.js]
indent_size=2
