[project]
name = "django-ai-chat"
version = "0.1.0"
requires-python = ">= 3.9"
dependencies = [
    "django>=4.2",
    "markdown>=3.9",
    "nh3>=0.3.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
ollama = ["ollama>=0.6"]
openai = ["openai>=2.3.0"]
google = ["google-genai>=1.43.0"]
anthropic = ["anthropic>=0.69.0"]
mistral = ["mistralai>=1.9.11"]

[tool.uv]
dev-dependencies = [
    "djlint>=1.36.4",
]

[tool.djlint]
indent=2
format_js=true
format_css=true

[tool.djlint.css]
indent_size=2

[tool.djlint.js]
indent_size=2
